:hammer: refactor(upgrade): update config file.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,9 +46,9 @@ opt-level = 1
 overflow-checks = false
 
 [dependencies]
-jkcenum_derive = { path = "derive", version = "0.2.0", optional = true }
+jkcenum_derive = { path = "./derive", version = "0.2.0", optional = true }
 thiserror = "*"
 
 [dev-dependencies]
-jkcenum_derive = { path = "derive", version = "0.1" }
+jkcenum_derive = { path = "derive", version = "0.2.0" }
 serde = { version = "*", features = ["derive"] }
