--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -32,4 +32,4 @@ proc-macro = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-virtue = "*"
+virtue = "^0.0"
